# indus

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: findHomebrewOpenMP.cmake  setIfUnset.cmake
manual/: plumed_indus_manual.tex  references.bib
manual/examples/bulk_water/: F_Ntilde_WHAM.out  README  f_bias_WHAM.out  indus.input  make_plot.py  plot_F_v_Ntilde_WHAM.eps
plumed_patch/: README  exclude_files.list  external_objects.list  patch_plumed.sh
plumed_patch/IndusInterface/: IndusInterface.cpp  IndusInterface.h
plumed_patch/scripts/install/examples/: install_patched_plumed.sh
plumed_patch/src/orderparameters/: OrderParametersInterface.cpp  OrderParametersInterface.h
plumed_patch/test/: run_tests.sh
plumed_patch/test/bias_ntilde_v/sphere/: indus.input  run_driver.sh
plumed_patch/test/bias_ntilde_v/sphere/RESTRAINT/: read_virial.sh  run_driver.sh
plumed_patch/test/bias_ntilde_v/sphere/RESTRAINT/ref/: compare_virial.py  indus.input  indus_virial.out
plumed_patch/test/bias_ntilde_v/sphere/indus_bias/: plumed.out
plumed_patch/test/bias_ntilde_v/sphere/indus_bias/ref/: indus.input
plumed_patch/test/bias_ntilde_v/sphere/ref/: plumed.out  plumed_2x_virial.out  run_driver.sh
plumed_patch/test/bias_ntilde_v/sphere/unbiased/: plumed.out
plumed_patch/test/bias_ntilde_v/sphere/unbiased/ref/: run_driver.sh
plumed_patch/test/bias_ntilde_v/sphere_RESTRAINT/ref/: plumed.out
scripts/: compare_forces.py
src/: AtomGroup.cpp  AtomGroup.h  Bias.cpp  Bias.h  CMakeLists.txt  CellGrid.cpp  CellGrid.h  CommonTypes.h  GenericFactory.h  Indus.cpp  Indus.h  InputParser.cpp  InputParser.h  MpiCommunicator.cpp  MpiCommunicator.h  ProbeVolume.cpp  ProbeVolume.h  ProbeVolume_Box.cpp  ProbeVolume_Box.h  ProbeVolume_Cylinder.cpp  ProbeVolume_Cylinder.h  ProbeVolume_Sphere.cpp  ProbeVolume_Sphere.h  SimpleVector.h  SimulationBox.cpp  SimulationBox.h  SimulationState.cpp  SimulationState.h  SwitchingFunction.cpp  SwitchingFunction.h  SwitchingFunction_r.cpp  SwitchingFunction_r.h  SwitchingFunction_x.cpp  SwitchingFunction_x.h  Topology.cpp  Topology.h  XdrFileTools.cpp  XdrFileTools.h  main.cpp  main.h
src/driver/: main.cpp  main.h
src/orderparameters/: Aligned.h  AtomGroup.cpp  AtomGroup.h  Bias.cpp  Bias.h  Bins.cpp  Bins.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CellGrid.cpp  CellGrid.h  CellGrid_DomainDecomposition.cpp  CellGrid_DomainDecomposition.h  ChillPlusTypes.h  CommonTypes.h  DomainDecomposition.h  GenericFactory.h  GenericFactoryInitialization.cpp  GenericFactoryInitialization.h  GptlWrappers.cpp  GptlWrappers.h  Indus.cpp  Indus.h  MpiCommunicator.cpp  MpiCommunicator.h  MpiData.cpp  MpiData.h  MpiDatatype.cpp  MpiDatatype.h  MpiDatatypeRegistrar.h  MpiEnvironment.cpp  MpiEnvironment.h  MpiOp.cpp  MpiOp.h  NeighborSphere.cpp  NeighborSphere.h  OpenMP.cpp  OpenMP.h  OrderParameter.cpp  (+46 more)
test/: CMakeLists.txt  run_calc.sh  run_test.sh  run_tests.sh
test/cell_grid/basic/: README  main.cpp  run_test.sh
test/indus/box/bulk_water/: indus.input  time_samples_indus.out
test/indus/box/bulk_water/ref/: bias.out  forces_debug.out  time_samples_indus.out
test/indus/cylinder/bulk_water/: indus.input  time_samples_indus.out
test/indus/cylinder/bulk_water/ref/: bias.out  forces_debug.out  time_samples_indus.out
test/indus/cylinder/bulk_water/tmp/: forces_debug.out  indus.input  time_samples_indus.out
test/indus/sphere_near_box_edge/bulk_water/: forces_debug.out  indus.input  time_samples_indus.out
test/indus/sphere_near_box_edge/bulk_water/ref/: time_samples_indus.out
test/indus/union_spherical_shells/bulk_water/setup_1/: forces_debug.out  sphere_centers.pos
test/indus/union_spherical_shells/bulk_water/setup_1/ref/: indus.input  output_files_to_check.input  time_samples_indus.out
test/indus_mpi/sphere_near_box_edge/bulk_water/: bias.out  forces_debug.out  indus.input  time_samples_indus.out
test/indus_mpi/sphere_near_box_edge/bulk_water/ref/: time_samples_indus.out
test/indus_mpi/union_spherical_shells/bulk_water/setup_1/ref/: bias.out  indus.input  time_samples_indus.out
test/sample_traj/bulk_water_278K/: README  initconf.gro  processed.top  traj_water_278K_b1000_e1010.xtc
